# xla-1

./: .gitignore  .gitmodules  .torch_pin  CMakeLists.txt  TROUBLESHOOTING.md  benv.sh  bld  build_torch_xla_libs.sh  cpu_device.env  example.py  flow  generate_code.sh  hlo_module.json  hlo_pre_opt.json  hlo_xla.json  ptwse  ptwse_scope.hh  pytorch  setup.py  test_train_mnist_cpk_None.mdl  wse_hlo_xla.json  wse_hlo_xla.pbtxt
contrib/colab/: xla_builder_autograd.ipynb
contrib/colab/.ipynb_checkpoints/: DC-GAN-checkpoint.ipynb
include/: absl
lazy_xla/csrc/: aten_xla_type.cpp
scripts/: build_torch_wheels.sh  cerebras_generate_code.sh  gen.py  generate_code.sh
test/: args_parse.py  run_tests.sh  test_mp_replication.py  test_operations.py  test_train_cifar.py  test_train_imagenet.py  test_train_mnist.py  test_train_mp_imagenet.py  test_train_mp_mnist.py  test_train_mp_mnist_15.py  test_train_mpcx_mnist.py
test/cpp/: CMakeLists.txt  run_tests.sh  test_aten_xla_tensor.cpp
torch_xla/: __init__.py
torch_xla/core/: compex.py  xla_builder.py  xla_env_vars.py  xla_model.py
torch_xla/csrc/: aten_autograd_ops.cpp  aten_tensor_ops.cpp  aten_xla_bridge.cpp  aten_xla_type.cpp  device.cpp  device.h  function_call_tracker.h  helpers.cpp  init_python_bindings.cpp  ir.cpp  ir.h  ir_dump_util.cpp  ir_dump_util.h  ir_util.cpp  ir_util.h  lower_custom.cpp  lower_custom.h  lowering_context.cpp  lowering_context.h  ptwse_scope.hh  pytorch_live_interface.h  random.cpp  softmax_builder.cpp  tensor.cpp  tensor.h  tensor_analyze.cpp  tensor_analyze.h  tensor_impl.h  tensor_methods.cpp  tensor_ops.cpp  tensor_sentinel.h  tensor_util.cpp  tensor_util.h  tensor_util_cer.cpp  tensor_util_cer.h  view.cpp  xla_lower_util.cpp  xla_lower_util.h
torch_xla/csrc/ops/: device_data.cpp  generic.cpp  generic.h  log_softmax.cpp  log_softmax_backward.cpp  mse_loss.cpp  mse_loss_backward.cpp  ops.cpp  ops.h  reflection_pad2d_backward.cpp  scalar.cpp  uniform.h
torch_xla/debug/: graph_saver.py
torch_xla/distributed/: cluster.py  data_parallel.py  parallel_loader.py  xla_dist_cer.py  xla_multiprocessing.py
torch_xla/utils/: utils.py
